# meh2

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  ideias
.github/workflows/: ci.yml
.opencode/plans/: reduce-rss-growth.md
benches/baselines/: cpu.md  rhai-vs-shell.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: ipc_roundtrip.rs  var_state.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs
crates/eww_shared_util/src/: locale.rs  wrappers.rs
crates/gtk4-impl/: Cargo.toml  build.rs
crates/gtk4-impl/src/: app.rs  bindings.rs  builder.rs  css.rs  launcher.rs  lib.rs  rhai_widget.rs  runtime.rs  widgets.rs  window.rs
crates/layer-shell/: Cargo.toml
crates/layer-shell/src/: lib.rs
crates/notifier-host/: Cargo.toml
crates/notifier-host/src/: host.rs  icon.rs  item.rs  lib.rs  watcher.rs
crates/notifier-host/src/proxy/: dbus_status_notifier_item.rs  dbus_status_notifier_watcher.rs  mod.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: inner.rs  lib.rs  manifest.rs
crates/plugin-host/tests/: sandbox.rs
crates/rhai-engine/: Cargo.toml
crates/rhai-engine/src/: inner.rs  lib.rs  sandbox.rs
crates/script-vars/: Cargo.toml
crates/script-vars/src/: lib.rs
crates/simplexpr/: Cargo.toml  build.rs
crates/simplexpr/src/: ast.rs  dynval.rs  error.rs  eval.rs
crates/simplexpr/src/parser/: lexer.rs  mod.rs
crates/yuck/: Cargo.toml
crates/yuck/src/: error.rs  format_diagnostic.rs
crates/yuck/src/config/: attributes.rs  backend_window_options.rs  file_provider.rs  monitor.rs  script_var_definition.rs  toplevel.rs  validate.rs  var_definition.rs  widget_definition.rs  widget_use.rs  window_definition.rs  window_geometry.rs
crates/yuck/src/parser/: ast.rs  ast_iterator.rs  from_ast.rs  lexer.rs  mod.rs
crates/yuck/src/value/: coords.rs
docs/: plugins.md
examples/minimal-bar/: meh.scss  meh.yuck
examples/plugin-demo/: eww.yuck
examples/plugin-demo/plugins/sysinfo/: main.rhai  plugin.toml
examples/rhai-bar/: meh.scss  meh.yuck
examples/rhai-bar/scripts/: cpu.rhai  greet.rhai  ram.rhai  time.rhai
examples/rhai-widget/: eww.yuck  main.rhai  meh.scss
examples/widget-test/: meh.scss  meh.yuck
meh2-default-config/: PKGBUILD
