[package]
name    = "meh_rhai_engine"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
default = []
rhai    = ["dep:rhai", "dep:serde_json"]

[dependencies]
rhai       = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
once_cell  = { workspace = true }
